# buildgen

./: .gitignore  .travis.yml  Buildinfo  Buildroot  CMakeLists.txt  INSTALL  LICENSE  README.md  test.hpp
buildgen-exe/: .directory  Buildinfo  CMakeLists.txt  commandline.cpp  commandline.hpp  files.cpp  files.cpp~  files.hpp  gen  gen-docs.sh  globals.cpp  globals.hpp  info.cpp  info.cpp.in  info.h  info.h.in  lua-functions.cpp  lua-functions.hpp  lua-init.cpp  lua-init.hpp  main.cpp  messages.cpp  messages.hpp  mystring.cpp  mystring.hpp  pathresolver.cpp  pathresolver.hpp  test.cpp  test.lua
buildgen-exe/lualibs/: config.ld  core.lua  core.luo  debug.lua  gen-docs.sh  stdlib.lua  stdlib.luo
buildgen-exe/lualibs/debug/: dumper.lua
buildgen-exe/lualibs/stdlib/: c.lua  c.luo  cpp.lua  d.lua  ld.lua  lua.lua  stdlib.lua  util.lua
buildgen-exe/lualibs/stdlib/c/: generateHeader.lua
buildgen-exe/lualibs/stdlib/util/: cp.lua  mv.lua  rm.lua
buildgen-xml/: buildgen-xml.lua  buildgenXML.lua  common.cpp  common.hpp  itargemanager-test.hpp  itargetmanager.hpp  load.cpp  load.hpp  save.cpp  save.hpp  target.cpp  target.hpp  targetmanager.cpp  targetmanager.hpp
generators/: Buildinfo  CMakeLists.txt
generators/makefile/: Buildinfo  CMakeLists.txt  commandline.cpp  commandline.hpp  gen-makefile  main.cpp  makefile.cpp  makefile.hpp
rapidxml/: rapidxml_print.hpp
